--- a/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Filtro.razor
@@ -129,7 +129,7 @@ else
 
 			ids = Herramientas.Listados.Generar(id);
 
-			resultadosGestor = BaseDatos.Juegos.Buscar.Genero(ids, 250);
+			resultadosGestor = BaseDatos.Juegos.Buscar.Filtro(ids, 250);
 
 			cargado = true;
 		}
