--- a/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
@@ -1,4 +1,5 @@
-﻿@using Juegos
+﻿@using Blazored.Video
+@using Juegos
 @using Microsoft.VisualBasic
 @using pepeizqs_deals_web.Areas.Identity.Data
 
