--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -24,6 +24,7 @@
     --colorEnlaceHover: #3486fd;
     --fondoCodigo: #345884;
     --alturaCabecera: 70px;
+    --fondoMinimo: #002c47;
 }
 
 @font-face {
